syntax = "proto3";

package user.v1;

option go_package = "github.com/DmitriiPro/microservices-proto/user/v1;userv1";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "validate/validate.proto";

service UserService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {
    option(google.api.http) = {
      post: "/v1/users"
      body: "*"
    };
  }

  rpc GetUserByID(GetUserByIDRequest) returns (GetUserResponse) {
    option(google.api.http) = {
      get: "/v1/users/{id}"
    };
  }
  
}

message GetUserResponse {
  int64 id = 1;
  string email = 2;
  google.protobuf.Timestamp created_at = 3;
}

message GetUserByIDRequest {
  int64 id = 1;
}

message CreateUserRequest {
  string email = 1 [(validate.rules).string = {email: true, min_len: 5, max_len: 30}];
  string password = 2 [(validate.rules).string = {min_len: 8, max_len: 50}];
}

message CreateUserResponse {
  int64 id = 1;
}